--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
 title: [Kar's Portfolio]
-description: [A short description of your site's purpose]
+description: [Projects and Learning Discoveries]
